[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "NFToot"
version = "0.3"
authors = [
  { name = "Franck Pommereau", email = "franck.pommereau@univ-evry.fr" },
]
description = "NFToot bot"
readme = "README.md"
requires-python = ">= 3.9"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
dependecies = [
  "typer[all]",
  "Mastodon.py",
  "bs4",
  "lxml",
]

[project.scripts]
nftoot = "nftoot.__main__:app"

[project.urls]
"Homepage" = "https://github.com/fpom/nftoot"
"Bug Tracker" = "https://github.com/fpom/nftoot/issues"
